--- a/Projeto X/index.html
+++ b/Projeto X/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Biblioteca Start</title>
+    <title>RAISE a Melhor</title>
 </head>
 <body>
     <header class="cabecalho">
         <div class="container">
             <img class="container__imagem" src="img/logo.png" alt="Logotipo">
             <h1 class="container__titulo">
-                 Projeto Raise <b class="container__titulo--negrito">Start</b>
+                 Projeto Raise <b class="container__titulo--negrito">Suplementos</b>
            </h1>
             <p class="container__frase">
-                 "Aqui, cada livro é um <i>start</i> para um novo conhecimento!"
+                 "Aqui, cada venda é uma nova  <i>historia</i> para um novo crecimento!"
                  </p>
         </div>
     </header>
